src/test/ui/in-band-lifetimes/mismatched_trait.stderr
error[E0621]: explicit lifetime required in the type of `y`
  --> $DIR/mismatched_trait.rs:6:9
   |
LL |     fn baz(&self, x: &'a u32, y: &u32) -> &'a u32 {
   |                                  ---- help: add explicit lifetime `'a` to the type of `y`: `&'a u32`
LL |         y
   |         ^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
